make sure kitty startup in the home directory

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1408,7 +1408,7 @@ font_size 14.0
 #: builds do not do update checking. Changing this option by reloading
 #: the config is not supported.
 
-# startup_session none
+startup_session ~/.config/kitty/kitty-startup.session
 
 #: Path to a session file to use for all kitty instances. Can be
 #: overridden by using the kitty --session =none command line option
