some config changes

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -912,11 +912,11 @@ font_size 14.0
 
 #: Tab bar {{{
 
-# tab_bar_edge bottom
+tab_bar_edge top
 
 #: The edge to show the tab bar on, top or bottom.
 
-# tab_bar_margin_width 0.0
+tab_bar_margin_width 10.0
 
 #: The margin to the left and right of the tab bar (in pts).
 
