--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -750,7 +750,9 @@ font_size 14.0
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-enabled_layouts fat,grid,stack,tall
+enabled_layouts fat,stack,tall
+
+# grid
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
