--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1314,7 +1314,7 @@ tab_bar_margin_width 10.0
 #: See rc_custom_auth <https://sw.kovidgoyal.net/kitty/remote-
 #: control/#rc-custom-auth> for details.
 
-# allow_remote_control no
+allow_remote_control socket-only
 
 #: Allow other programs to control kitty. If you turn this on, other
 #: programs can control all aspects of kitty, including sending text
@@ -1343,7 +1343,7 @@ tab_bar_margin_width 10.0
 #: yes
 #:     Remote control requests are always accepted.
 
-# listen_on none
+listen_on unix:/tmp/kitty
 
 #: Listen to the specified UNIX socket for remote control connections.
 #: Note that this will apply to all kitty instances. It can be
