--- a/runcom/aerospace.toml
+++ b/runcom/aerospace.toml
@@ -215,7 +215,7 @@ shift-down = ['volume set 0', 'mode main']
 2 = 'main'
 3 = 'main'
 4 = 'main'
-5 = 'secondary'
+5 = 'main'
 6 = 'secondary'
 7 = 'secondary'
 8 = 'secondary'
