--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -750,7 +750,7 @@ font_size 14.0
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-enabled_layouts fat,stack,tall
+enabled_layouts fat
 
 # grid
 
@@ -798,7 +798,7 @@ enabled_layouts fat,stack,tall
 #: set the vertical and horizontal sides. Three values set top,
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
-window_padding_width 4
+# window_padding_width 4
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -914,11 +914,11 @@ window_padding_width 4
 
 #: Tab bar {{{
 
-tab_bar_edge top
+# tab_bar_edge top
 
 #: The edge to show the tab bar on, top or bottom.
 
-tab_bar_margin_width 10.0
+# tab_bar_margin_width 10.0
 
 #: The margin to the left and right of the tab bar (in pts).
 
@@ -1910,7 +1910,7 @@ macos_option_as_alt yes
 #: New OS window
 
 # map kitty_mod+n new_os_window
-# map cmd+n       new_os_window
+map cmd+alt+n       new_os_window
 
 #::  Works like new_window above, except that it opens a top-level OS
 #::  window. In particular you can use new_os_window_with_cwd to open
