--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1910,7 +1910,7 @@ macos_option_as_alt yes
 #: New OS window
 
 # map kitty_mod+n new_os_window
-map cmd+alt+n       new_os_window
+map cmd+n       new_os_window
 
 #::  Works like new_window above, except that it opens a top-level OS
 #::  window. In particular you can use new_os_window_with_cwd to open
@@ -2031,6 +2031,8 @@ map cmd+alt+n       new_os_window
 
 # map kitty_mod+t new_tab
 # map cmd+t       new_tab
+map cmd+t       no_op
+# unmap cmd+t
 
 #: Close tab
 
